--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -27,6 +27,7 @@
                 </div>
             </nav>
         </div>
+        <--!hero image--> 
         <section>
             <div class="hero"></div>
         </section>
