--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
             </nav>
         </div>
         <--!hero image--> 
-        <section>
-            <div class="hero"></div>
-        </section>
+        <section class="hero"></section>
     </header>
     <main>
         <article class="content">
