--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </nav>
         </div>
-        <--!hero image--> 
+        <!--hero image--> 
         <section class="hero"></section>
     </header>
     <main>
