--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <article class="content">
             <section class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left">
+                <img src="./assets/images/search-engine-optimization.jpg" alt="notebook on a table with a laptop" class="float-left">
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they
@@ -42,7 +42,7 @@
                 </p>
             </section>
             <section class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right">
+                <img src="./assets/images/online-reputation-management.jpg" alt="laptop on a table" class="float-right">
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -52,7 +52,7 @@
                 </p>
             </section>
             <section class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left">
+                <img src="./assets/images/social-media-marketing.jpg" alt="social media icons" class="float-left">
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -65,7 +65,7 @@
         <aside class="benefits">
             <section class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png">
+                <img src="./assets/images/lead-generation.png" alt="lead generation icon">
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers
                     directly
@@ -74,7 +74,7 @@
             </section>
             <section class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png">
+                <img src="./assets/images/brand-awareness.png" alt="light bulb">
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and
                     visibility
@@ -83,7 +83,7 @@
             </section>
             <section class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png">
+                <img src="./assets/images/cost-management.png" alt="wheel with coins">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no
                     longer
